# dashboard-app

./: README.md  pyproject.toml
dashboard_app/: __init__.py  config.py  controller.py  hardware.py  main.py
dashboard_app/actions/: __init__.py  keyboard.py  launch.py  volume.py
dashboard_app/ui/: canvas.py  config_dialog.py  layout_preview.py  main_window.py
dashboard_app/utils/: __init__.py  key_sequences.py
dashboard_app/windows/: __init__.py  audio.py  input.py
ios/StudyFocusApp/: Package.swift
ios/StudyFocusApp/Sources/StudyFocusApp/: ContentView.swift  StudyFocusApp.swift
ios/StudyFocusApp/Sources/StudyFocusApp/Models/: AgendaEvent.swift  Streak.swift  StudySession.swift  StudyTask.swift
ios/StudyFocusApp/Sources/StudyFocusApp/Services/: CalendarIntegrationService.swift  FocusModeManager.swift  LiveActivityManager.swift  MagisterService.swift
ios/StudyFocusApp/Sources/StudyFocusApp/Utils/: TimeInterval+Formatting.swift
ios/StudyFocusApp/Sources/StudyFocusApp/ViewModels/: AgendaStore.swift  StudySessionStore.swift  TaskStore.swift
ios/StudyFocusApp/Sources/StudyFocusApp/Views/: AgendaView.swift  DashboardView.swift  FocusSessionView.swift  SettingsView.swift  TasksView.swift
