[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dashboard-app"
version = "0.1.0"
description = "Hardware dashboard controller with test mode"
readme = "README.md"
authors = [{name = "Dashboard Team"}]
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.6",
    "pyserial>=3.5",
    "pyautogui>=0.9.54",
]

[project.scripts]
dashboard-app = "dashboard_app.main:main"
